Fixed the z-index of the toolbar toggle button.

--- a/src-gwt/org/opencms/gwt/client/ui/css/toolbar.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/toolbar.css
@@ -91,7 +91,7 @@ div.toolbarToggle{
 	left: 97%;
 	top: -3px;
 	padding: 3px 3px 1px 3px;
-	z-index: value("constants.css.zIndexInline");
+	z-index: value("constants.css.zIndexPopup");
 }
 
 .toolbarToggle, .toolbarToggle * {
